# HellCore

./: .editorconfig  .gitignore  README.md  autogen.sh  build.sh  configure.ac  flake.nix
src/: .gitignore  Makefile.am  ast.c  ast.h  client_bsd.c  client_sysv.c  code_gen.c  db.h  db_file.c  db_objects.c  db_private.h  db_properties.c  db_verbs.c  disassemble.c  eval_env.c  eval_env.h  eval_vm.c  eval_vm.h  exceptions.h  execute.c  execute.h  files.c  functions.c  functions.h  gnu-malloc.c  hash.c  keywords.gperf  keywords.h  list.c  log.c  log.h  match.c  match.h  md5.h  my-ctype.h  my-fcntl.h  my-in.h  my-inet.h  my-ioctl.h  my-poll.h  (+61 more)
